--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~4.0.1",
+    "gulp": "^3.9.1",
+    "gulp-tslint": "^8.1.2",
+    "gulp-typescript": "^3.2.3",
     "jasmine-core": "~2.6.4",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.1",
